--- a/M1U2/ejemplo.html
+++ b/M1U2/ejemplo.html
@@ -5,20 +5,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi CV</title>
 </head>
 
 <body>
-    <h1>encabezado 1</h1>
+    <h1>MI CURRICULUM VITAE</h1>
+    <h2>Apellido y Nombre: Chavez Fernando Nicolás</h2>
 
-    <h3>info</h3>
+    <img src="persona_random.png" alt="este no soy yo" width="300" height="168">
+
+    <h2>Sobre mí</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident nemo ad iste expedita! Laborum qui quibusdam
-        illo odit! Ex assumenda deserunt esse fuga dicta praesentium dolore culpa quo vero <a
-            href="https://www.diariodecuyo.com.ar" target="_blank">laudantium.</a></p>
+        illo odit! Ex assumenda deserunt esse fuga dicta praesentium dolore culpa quo vero laudantium.
 
-    <h3>Ejemplo imagenes</h3>
-    <img src="dipper.jpg" alt="Dipper">
-    <img src="img/casa.jpg" alt="casa">
+    <h2>Experiencia</h2>
+    <p>Empresa, Ciudad — Puesto</p>
+    <p>MES DEL 20XX-MES DEL 20XX</p>
+    <ul>
+        <li>Escribe aquí tu texto.</li>
+        <li>Escribe aquí tu texto.</li>
+        <li>Escribe aquí tu texto.</li>
+    </ul>
+
+    <h2>Para conocer algunos trabajos míos, haga <a href="https://www.instagram.com/1895digital/?hl=es-la" target="_blank">click aquí</a>.</h2>
+    <h2>Para contactarse, complete el formulario:</h2>
+    <form action="">
+        <p>
+            <label for="name">Nombre y Apellido</label>
+            <input type="text" name="nombre y apellido" placeholder="Escriba su nombre y apellido"/>
+        </p>
+        <p>
+            <label for="name">Correo electrónico</label>
+            <input type="text" name="apellido" placeholder="Escriba su correo electronico">
+        </p>
+        <p>
+            <label for="mensaje">Su mensaje</label>
+            <textarea name="mensaje" id="" cols="30" rows="10"></textarea>
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+        </p>
+    </form>
+
 </body>
 
 </html>
